--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
         <span>0772 89 06 14</span>
         <span style="margin: 0 1rem;">|</span>
         <i class="fas fa-globe"></i>
-        <span>نخدم كل ولايات الجزائر</span>
+        <span>نمثلكم في كل ولايات الجزائر</span>
     </div>
 
     <!-- التنقل -->
@@ -1587,3 +1587,4 @@
     </script>
 </body>
 </html>
+
